# Crypto-Market-Radar-v1

./: .env.example  .gitignore  Makefile  README.md  audit-phase1.json  pyproject.toml  run.sh
docs/: doc.md  突破二次确认交易信号Bot_方案与开发任务.md
scripts/: install.sh
specs/: fix-2026-06-19-critical.md  fix-all-issues-v1.1.md  fix-code-review-issues.md  fix-critical-2026-06-19-audit.md  lightweight-ws-replacement.md  notifier-module.md
src/: main.py  notifier.py
src/alerts/: __init__.py  dedup.py  engine.py  merger.py  templates.py
src/cache/: __init__.py  derivatives_buffer.py  kline_buffer.py  trade_buffer.py
src/config/: loader.py  models.py
src/exchange/: __init__.py  adapter.py  binance_liquidation_ws.py  binance_rest.py  binance_ws.py  orderbook.py
src/indicators/: __init__.py  depth.py  funding.py  ma.py  returns.py  rsi.py  trades.py  volume.py  vwap.py
src/scheduler/: __init__.py  jobs.py
src/state/: __init__.py  engine.py  rules.py  state_types.py
src/storage/: __init__.py
src/telegram/: __init__.py  bot.py  commands.py  formatter.py
systemd/: crypto-radar.service
tests/: test_regressions.py
