[project]
name = "crypto-market-radar"
version = "1.0.0"
description = "Crypto Market Radar Bot - 24x7 market monitoring with Telegram alerts"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "ccxt>=4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-telegram-bot>=21.0,<23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
